--- a/ruoyi-ui/.env.development
+++ b/ruoyi-ui/.env.development
@@ -9,3 +9,11 @@ VUE_APP_BASE_API = '/dev-api'
 
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
+
+# BladeX认证服务器配置
+VUE_APP_BLADE_AUTH_SERVER = 'https://auth.we-safer.net'
+VUE_APP_BLADE_CLIENT_ID = 'chem_ruoyi'
+VUE_APP_BLADE_TENANT_ID = '000000'
+VUE_APP_BLADE_CALLBACK_URL = 'http://192.168.100.106:81/index'
+
+
