--- a/ruoyi-ui/.env.development
+++ b/ruoyi-ui/.env.development
@@ -15,5 +15,5 @@ VUE_APP_BLADE_AUTH_SERVER = 'https://auth.we-safer.net'
 VUE_APP_BLADE_CLIENT_ID = 'chem_ruoyi'
 VUE_APP_BLADE_TENANT_ID = '000000'
 VUE_APP_BLADE_CALLBACK_URL = 'http://192.168.100.106:81/auth/blade-callback'
-
+VUE_APP_BLADE_BACKEND_URL = 'http://192.168.100.106:81'
 
