--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -16,7 +16,7 @@ ruoyi:
 # 开发环境配置
 server:
   # 服务器的HTTP端口，默认为8080
-  port: 8088
+  port: 8090
   servlet:
     # 应用的访问路径
     context-path: /
@@ -138,7 +138,7 @@ blade:
     # 客户端密钥
     client-secret: chem_ruoyi_secret
     # 重定向URI
-    redirect-uri: http://192.168.100.106:81/auth/blade-callback
+    redirect-uri: http://localhost:81/auth/blade-callback
   api:
     # BladeX API基础地址
     base-url: https://we-safer.net/api
