--- a/ruoyi-ui/.env.development
+++ b/ruoyi-ui/.env.development
@@ -14,6 +14,6 @@ VUE_CLI_BABEL_TRANSPILE_MODULES = true
 VUE_APP_BLADE_AUTH_SERVER = 'https://auth.we-safer.net'
 VUE_APP_BLADE_CLIENT_ID = 'chem_ruoyi'
 VUE_APP_BLADE_TENANT_ID = '454661'
-VUE_APP_BLADE_CALLBACK_URL = 'http://192.168.100.106:81/auth/blade-callback'
-VUE_APP_BLADE_BACKEND_URL = 'http://192.168.100.106:81'
+VUE_APP_BLADE_CALLBACK_URL = 'http://localhost:81/auth/blade-callback'
+VUE_APP_BLADE_BACKEND_URL = 'http://127.0.0.1:81'
 
