--- a/application-prod.yml
+++ b/application-prod.yml
@@ -88,9 +88,9 @@ spring:
     druid:
       # 主库数据源
       master:
-        url: jdbc:mysql://${MYSQL_HOST:ruoyi-mysql}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:ry}?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+        url: jdbc:mysql://${MYSQL_HOST:ruoyi-mysql}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:ry-vue}?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
         username: ${MYSQL_USERNAME:root}
-        password: ${MYSQL_PASSWORD:ruoyi@123}
+        password: ${MYSQL_PASSWORD:123456}
       # 从库数据源
       slave:
         # 从数据源开关/默认关闭
