--- a/ruoyi-ui/.env.production
+++ b/ruoyi-ui/.env.production
@@ -6,3 +6,14 @@ ENV = 'production'
 
 # 若依管理系统/生产环境
 VUE_APP_BASE_API = '/prod-api'
+
+
+# 路由懒加载
+VUE_CLI_BABEL_TRANSPILE_MODULES = true
+
+# BladeX认证服务器配置
+VUE_APP_BLADE_AUTH_SERVER = 'https://auth.we-safer.net'
+VUE_APP_BLADE_CLIENT_ID = 'chem_ruoyi'
+VUE_APP_BLADE_TENANT_ID = '454661'
+VUE_APP_BLADE_CALLBACK_URL = 'http://localhost:81/auth/blade-callback'
+VUE_APP_BLADE_BACKEND_URL = 'http://127.0.0.1:81'
